--- a/templates/editattraction.html
+++ b/templates/editattraction.html
@@ -14,9 +14,9 @@
             <h2>Edit Attraction</h2>
             <form action="{{url_for('edit_attraction', country_id=country.id, attraction_id=attraction.id)}}" method="post">
                 <p>Name:</p>
-                <input type="text" size="30" name="name" placeholder='{{attraction.name}}'>
+                <input type="text" size="30" name="name" placeholder='{{attraction.name}}' required="required">
                 <p>City:</p>
-                <input type="text" size="30" name="city" placeholder='{{attraction.city}}'>
+                <input type="text" size="30" name="city" placeholder='{{attraction.city}}' required="required">
                 <p>Description:</p>
                 <textarea name="description" rows="10" cols="100" placeholder='{{attraction.description}}'></textarea>
                 <br>
@@ -24,6 +24,7 @@
                 <input type="submit" value="Confirm">
                 <br>
                 <a href="{{url_for('show_attraction', country_id=country.id, attraction_id=attraction.id)}}">Cancel</a>
+                <a href="{{url_for('delete_attraction', attraction_id=attraction.id, country_id=country.id)}}">Delete</a>
             </form>
         </section>
     </body>
