--- a/templates/newattraction.html
+++ b/templates/newattraction.html
@@ -11,18 +11,19 @@
             <h1>Tourist Catalog</h1>
         </header>
         <section>
-            <h2>Edit Country</h2>
-            <form action="{{url_for('edit_country', country_id=country.id)}}" method="post">
+            <h2>Edit Attraction</h2>
+            <form action="{{url_for('new_attraction', country_id=country.id)}}" method="post">
                 <p>Name:</p>
-                <input type="text" size="30" name="name" placeholder='{{country.name}}' required="required">
+                <input type="text" size="30" name="name" required="required">
+                <p>City:</p>
+                <input type="text" size="30" name="city" required="required">
                 <p>Description:</p>
-                <textarea name="description" rows="10" cols="100" placeholder='{{country.description}}'></textarea>
+                <textarea name="description" rows="10" cols="100"></textarea>
                 <br>
                 <br>
                 <input type="submit" value="Confirm">
                 <br>
                 <a href="{{url_for('show_country', country_id=country.id)}}">Cancel</a>
-                <a href="{{url_for('delete_country', country_id=country.id)}}">Delete</a>
             </form>
         </section>
     </body>
