--- a/templates/deletecountry.html
+++ b/templates/deletecountry.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Tourist Catalog</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+{% extends "base.html" %}
+{% block content %}
 
-    <body>
-        <header>
-            <h1>Tourist Catalog</h1>
-        </header>
-        <section>
-            <h2>Delete {{country.name}}</h2>
-            <h3>Are you sure you want to delete {{country.name}}</h3>
-            <form action="{{url_for('delete_country', country_id=country.id, attraction_id=attraction.id)}}" method="post">
-                <input type="submit" value="Confirm">
-                <br>
-                <a href="{{url_for('show_country', country_id=country.id)}}">Cancel</a>
-            </form>
-        </section>
-    </body>
-</html>
+    <section>
+        <h2>Delete {{country.name}}</h2>
+        <h3>Are you sure you want to delete {{country.name}}</h3>
+        <form action="{{url_for('delete_country', country_id=country.id, attraction_id=attraction.id)}}" method="post">
+            <input type="submit" value="Confirm">
+            <br>
+            <a href="{{url_for('show_country', country_id=country.id)}}">Cancel</a>
+        </form>
+    </section>
+
+{% endblock %}
