--- a/templates/editattraction.html
+++ b/templates/editattraction.html
@@ -1,31 +1,22 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Tourist Catalog</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+{% extends "base.html" %}
+{% block content %}
 
-    <body>
-        <header>
-            <h1>Tourist Catalog</h1>
-        </header>
-        <section>
-            <h2>Edit Attraction</h2>
-            <form action="{{url_for('edit_attraction', country_id=country.id, attraction_id=attraction.id)}}" method="post">
-                <p>Name:</p>
-                <input type="text" size="30" name="name" placeholder='{{attraction.name}}' required="required">
-                <p>City:</p>
-                <input type="text" size="30" name="city" placeholder='{{attraction.city}}' required="required">
-                <p>Description:</p>
-                <textarea name="description" rows="10" cols="100" placeholder='{{attraction.description}}'></textarea>
-                <br>
-                <br>
-                <input type="submit" value="Confirm">
-                <br>
-                <a href="{{url_for('show_attraction', country_id=country.id, attraction_id=attraction.id)}}">Cancel</a>
-                <a href="{{url_for('delete_attraction', attraction_id=attraction.id, country_id=country.id)}}">Delete</a>
-            </form>
-        </section>
-    </body>
-</html>
+    <section>
+        <h2>Edit Attraction</h2>
+        <form action="{{url_for('edit_attraction', country_id=country.id, attraction_id=attraction.id)}}" method="post">
+            <p>Name:</p>
+            <input type="text" size="30" name="name" placeholder='{{attraction.name}}' required="required">
+            <p>City:</p>
+            <input type="text" size="30" name="city" placeholder='{{attraction.city}}' required="required">
+            <p>Description:</p>
+            <textarea name="description" rows="10" cols="100" placeholder='{{attraction.description}}'></textarea>
+            <br>
+            <br>
+            <input type="submit" value="Confirm">
+            <br>
+            <a href="{{url_for('show_attraction', country_id=country.id, attraction_id=attraction.id)}}">Cancel</a>
+            <a href="{{url_for('delete_attraction', attraction_id=attraction.id, country_id=country.id)}}">Delete</a>
+        </form>
+    </section>
+
+{% endblock %}
