--- a/templates/loggedcountry.html
+++ b/templates/loggedcountry.html
@@ -2,6 +2,8 @@
 {% block content %}
 
     <section>
+        <h2>{{country.name}}</h2>
+        <a href="{{url_for('edit_country', country_id=country.id)}}">Edit</a>
         <p>{{country.description}}</p>
         <h2>Attractions</h2>
 
@@ -9,7 +11,6 @@
         <a href="{{url_for('show_attraction', country_id=country.id, attraction_id=a.id)}}">{{a.name}}</a>
         <br>
         {% endfor %}
-
     </section>
 
 {% endblock %}
