--- a/templates/newattraction.html
+++ b/templates/newattraction.html
@@ -1,30 +1,21 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Tourist Catalog</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+{% extends "base.html" %}
+{% block content %}
 
-    <body>
-        <header>
-            <h1>Tourist Catalog</h1>
-        </header>
-        <section>
-            <h2>Edit Attraction</h2>
-            <form action="{{url_for('new_attraction', country_id=country.id)}}" method="post">
-                <p>Name:</p>
-                <input type="text" size="30" name="name" required="required">
-                <p>City:</p>
-                <input type="text" size="30" name="city" required="required">
-                <p>Description:</p>
-                <textarea name="description" rows="10" cols="100"></textarea>
-                <br>
-                <br>
-                <input type="submit" value="Confirm">
-                <br>
-                <a href="{{url_for('show_country', country_id=country.id)}}">Cancel</a>
-            </form>
-        </section>
-    </body>
-</html>
+    <section>
+        <h2>Edit Attraction</h2>
+        <form action="{{url_for('new_attraction', country_id=country.id)}}" method="post">
+            <p>Name:</p>
+            <input type="text" size="30" name="name" required="required">
+            <p>City:</p>
+            <input type="text" size="30" name="city" required="required">
+            <p>Description:</p>
+            <textarea name="description" rows="10" cols="100"></textarea>
+            <br>
+            <br>
+            <input type="submit" value="Confirm">
+            <br>
+            <a href="{{url_for('show_country', country_id=country.id)}}">Cancel</a>
+        </form>
+    </section>
+
+{$ endblock %}
