--- a/templates/newcountry.html
+++ b/templates/newcountry.html
@@ -1,28 +1,19 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Tourist Catalog</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+{% extends "base.html" %}
+{% block content %}
 
-    <body>
-        <header>
-            <h1>Tourist Catalog</h1>
-        </header>
-        <section>
-            <h2>New Country</h2>
-            <form action="{{url_for('new_country')}}" method="post">
-                <p>Name:</p>
-                <input type="text" size="30" name="name" required="required">
-                <p>Description:</p>
-                <textarea name="description" rows="10" cols="100"></textarea>
-                <br>
-                <br>
-                <input type="submit" value="Confirm">
-                <br>
-                <a href="{{url_for('home')}}">Cancel</a>
-            </form>
-        </section>
-    </body>
-</html>
+    <section>
+        <h2>New Country</h2>
+        <form action="{{url_for('new_country')}}" method="post">
+            <p>Name:</p>
+            <input type="text" size="30" name="name" required="required">
+            <p>Description:</p>
+            <textarea name="description" rows="10" cols="100"></textarea>
+            <br>
+            <br>
+            <input type="submit" value="Confirm">
+            <br>
+            <a href="{{url_for('home')}}">Cancel</a>
+        </form>
+    </section>
+
+{% endblock %}
