--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="//apis.google.com/js/platform.js?onload=start"></script>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}"
     </head>
 
     <body>
