--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         <title>Tourist Catalog</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}"
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}">
     </head>
     <body>
         <header>
