--- a/templates/deletecountry.html
+++ b/templates/deletecountry.html
@@ -4,10 +4,10 @@
     <section>
         <h2>Delete {{country.name}}</h2>
         <h3>Are you sure you want to delete {{country.name}}</h3>
-        <form action="{{url_for('delete_country', country_id=country.id, attraction_id=attraction.id)}}" method="post">
+        <form action="{{url_for('country.delete_country', country_id=country.id)}}" method="post">
             <input type="submit" value="Confirm">
             <br>
-            <a href="{{url_for('show_country', country_id=country.id)}}">Cancel</a>
+            <a href="{{url_for('country.show_country', country_id=country.id)}}">Cancel</a>
         </form>
     </section>
 
