--- a/templates/editattraction.html
+++ b/templates/editattraction.html
@@ -3,7 +3,7 @@
 
     <section>
         <h2>Edit Attraction</h2>
-        <form action="{{url_for('edit_attraction', country_id=country.id, attraction_id=attraction.id)}}" method="post">
+        <form action="{{url_for('attraction.edit_attraction', country_id=country.id, attraction_id=attraction.id)}}" method="post">
             <p>Name:</p>
             <input type="text" size="30" name="name" placeholder='{{attraction.name}}' required="required">
             <p>City:</p>
@@ -14,8 +14,8 @@
             <br>
             <input type="submit" value="Confirm">
             <br>
-            <a href="{{url_for('show_attraction', country_id=country.id, attraction_id=attraction.id)}}">Cancel</a>
-            <a href="{{url_for('delete_attraction', attraction_id=attraction.id, country_id=country.id)}}">Delete</a>
+            <a href="{{url_for('attraction.show_attraction', country_id=country.id, attraction_id=attraction.id)}}">Cancel</a>
+            <a href="{{url_for('attraction.delete_attraction', attraction_id=attraction.id, country_id=country.id)}}">Delete</a>
         </form>
     </section>
 
