--- a/templates/editcountry.html
+++ b/templates/editcountry.html
@@ -3,7 +3,7 @@
 
     <section>
         <h2>Edit Country</h2>
-        <form action="{{url_for('edit_country', country_id=country.id)}}" method="post">
+        <form action="{{url_for('country.edit_country', country_id=country.id)}}" method="post">
             <p>Name:</p>
             <input type="text" size="30" name="name" placeholder='{{country.name}}' required="required">
             <p>Description:</p>
@@ -12,8 +12,8 @@
             <br>
             <input type="submit" value="Confirm">
             <br>
-            <a href="{{url_for('show_country', country_id=country.id)}}">Cancel</a>
-            <a href="{{url_for('delete_country', country_id=country.id)}}">Delete</a>
+            <a href="{{url_for('country.show_country', country_id=country.id)}}">Cancel</a>
+            <a href="{{url_for('country.delete_country', country_id=country.id)}}">Delete</a>
         </form>
     </section>
 
