--- a/templates/newcountry.html
+++ b/templates/newcountry.html
@@ -3,7 +3,7 @@
 
     <section>
         <h2>New Country</h2>
-        <form action="{{url_for('new_country')}}" method="post">
+        <form action="{{url_for('country.new_country')}}" method="post">
             <p>Name:</p>
             <input type="text" size="30" name="name" required="required">
             <p>Description:</p>
@@ -12,7 +12,7 @@
             <br>
             <input type="submit" value="Confirm">
             <br>
-            <a href="{{url_for('home')}}">Cancel</a>
+            <a href="{{url_for('home.home')}}">Cancel</a>
         </form>
     </section>
 
